Fix follow button on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -947,6 +947,13 @@ span.picture {
     }
   }
 
+  #follow-form {
+    position: absolute;
+    top: 25px;
+    right: 20px;
+    display: block;
+  }
+
   .stats_wrapper {
     display: block;
     margin: auto;
